--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "@heroicons/vue": "^2.0.18"
+    "@heroicons/vue": "^2.0.18",
+    "exceljs": "^4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
