--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "@heroicons/vue": "^2.0.18",
-    "exceljs": "^4.4.0"
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
